feat(history_service) add new code history and implement user auth service